--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -20,32 +20,32 @@ spring:
             maxAge: 3600
       routes:
         - id: user-service
-          uri: http://${server_ip}:8799
+          uri: http://${USER_SERVICE_IP:127.0.0.1}:${USER_SERVICE_PORT:8799}
           predicates:
             - Path=/user-service/**
         - id: message-service
-          uri: http://${server_ip}:8798
+          uri: http://${MESSAGE_SERVICE_IP:127.0.0.1}:${MESSAGE_SERVICE_PORT:8798}
           predicates:
             - Path=/message-service/**
         - id: chat-service
-          uri: ws://${server_ip}:8798
+          uri: ws://${CHAT_SERVICE_IP:127.0.0.1}:${CHAT_SERVICE_PORT:8798}
           predicates:
             - Path=/chat/**
         - id: game-service
-          uri: ws://${server_ip}:8798
+          uri: ws://${GAME_SERVICE_IP:127.0.0.1}:${GAME_SERVICE_PORT:8798}
           predicates:
             - Path=/game/**
         - id: video-chat-service
-          uri: ws://${server_ip}:8798
+          uri: ws://${VIDEO_CHAT_SERVICE_IP:127.0.0.1}:${VIDEO_CHAT_SERVICE_PORT:8798}
           predicates:
             - Path=/video-chat/**
         - id: study-service
-          uri: http://${server_ip}:8797
+          uri: http://${STUDY_SERVICE_IP:127.0.0.1}:${STUDY_SERVICE_PORT:8797}
           predicates:
             - Path=/study-service/**
         - id: ai-service
-          uri: http://${server_ip}:8796
+          uri: http://${AI_SERVICE_IP:127.0.0.1}:${AI_SERVICE_PORT:8796}
           predicates:
             - Path=/ai-service/**
 server:
-  port: 8700
+  port: ${SERVER_PORT:8700}
