--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -46,6 +46,6 @@ spring:
         - id: ai-service
           uri: http://${AI_SERVICE_IP:127.0.0.1}:${AI_SERVICE_PORT:8796}
           predicates:
-            - Path=/ai-service/**
+            - Path=/AI-service/**
 server:
   port: ${SERVER_PORT:8700}
